infra/k8s/ingress-load-balancer.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-load-balancer
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: shoppe.com
      http:
        paths:
          - path: /api/v1/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 3000
